Added ngrx & ngrx features/effects

--- a/src/app/modules/products/product-lost/product-lost.component.html
+++ b/src/app/modules/products/product-lost/product-lost.component.html
@@ -1,9 +1,6 @@
 <div>
   <div>
-    <input type="text" [(ngModel)]="name" />
-  </div>
-  <div>
-    <button (click)="create()">create</button>
+    <button routerLink="create">create</button>
   </div>
 </div>
 <ul>
